# NCEISync

./: README.md  pyproject.toml
src/NCEISync/: curl.py  ls.py  main.py
